--- a/Jackson-binding/.classpath
+++ b/Jackson-binding/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.9.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.9.8-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.9.8-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.9.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.9.8 (1).jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.9.8 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
